--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "notion",
-  "version": "1.0.0",
-  "description": "",
+  "description": "Electron based desktop app for notion.so",
+  "version": "0.0.1",
   "main": "index.js",
   "scripts": {
     "start": "electron .",
-    "build:macOS": "node_modules/electron-packager/cli.js . Notion --icon=icons/icon.icns --platform=darwin --arch=x64 --out=builds && zip -r builds/Notion-darwin-x64/Notion.zip builds/Notion-darwin-x64/Notion.app"
+    "build": "electron-packager . notion --overwrite --icon=icons/icon.icns --platform=linux --arch=x64 --out=dist",
+    "deb": "electron-installer-debian --config config.deb.json"
   },
   "author": "nick@rokkincat.com",
   "license": "ISC",
   "dependencies": {
     "electron-packager": "^7.1.0",
     "electron-prebuilt": "^1.2.5"
+  },
+  "devDependencies": {
+    "electron-installer-debian": "^0.5.2"
   }
 }
